MPLS dissector no longer registers itself in "ppp.protocol" table
This issue was migrated from bug 9492 in our old bug tracker.
Original bug information:
Reporter: Peter Paluch
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.8.13
Attachments:
packet-mpls.c.diff: packet-mpls.c diff to register the MPLS dissector in the "ppp.protocol" table
mpls-capture.pcap: MPLS-labeled packets in PPP frames (a traceroute captured at the source, hence the responses are received unlabeled because of penultimate hop popping)