Add MPLS dissector to "ppp.protocol" table.  Bug 9492 (https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=9492)

From Peter Paluch

svn path=/trunk/; revision=53694