epan/dissectors/packet-mpls.c
@@ -825,6 +825,8 @@ proto_reg_handoff_mpls(void)
     mpls_handle = find_dissector("mpls");
     dissector_add_uint("ethertype", ETHERTYPE_MPLS, mpls_handle);
     dissector_add_uint("ethertype", ETHERTYPE_MPLS_MULTI, mpls_handle);
+    dissector_add_uint("ppp.protocol", PPP_MPLS_UNI, mpls_handle);
+    dissector_add_uint("ppp.protocol", PPP_MPLS_MULTI, mpls_handle);
     dissector_add_uint("chdlc.protocol", ETHERTYPE_MPLS, mpls_handle);
     dissector_add_uint("chdlc.protocol", ETHERTYPE_MPLS_MULTI, mpls_handle);
     dissector_add_uint("gre.proto", ETHERTYPE_MPLS, mpls_handle);
